--- a/utah-dwq-open-source.Rmd
+++ b/utah-dwq-open-source.Rmd
@@ -9,12 +9,13 @@ output:
 
 <h4>Jake Vander Laan (jvander@utah.gov)</h4>  
 <h4>Elise Hinman (ehinman@utah.gov)</h4>  
+
 ```{r, echo=F, fig.align="center"}
 knitr::include_graphics('images/title-logo.PNG')
 ```
 
-# To view slide info (not published yet):
-<h2>**[bookdown.org/jakevl/udwq-open-source](https://bookdown.org/jakevl/udwq-open-source/){target="_blank"}**</h2>
+# To view slides:
+<h2>**[bookdown.org/jakevl/udwq-open-source](https://bookdown.org/jakevl/utah-dwq-open-source/){target="_blank"}**</h2>
 
 # Why use open source?
 
@@ -28,6 +29,7 @@ knitr::include_graphics('images/title-logo.PNG')
 - Querying/downloading data  
 - Water quality assessments
 - Data visualization
+- Documenting & communicating analyses
 
 # Our general approach
 
@@ -76,7 +78,7 @@ knitr::include_graphics('images/assignAUs-help.PNG')
 
 
 ## Markdown
-Text formatting syntax that allows conversion of plain text to rich text HTML, PDF, and other document types including tables, figures, and source code.
+Text formatting syntax that allows conversion of plain text to rich text HTML, PDF, and other document types including ***<span style="color:#2e6da4">tables, figures, and code</span>***.
 
 - Documents (package rmarkdown)
 - Chapters & books (package bookdown)
@@ -84,7 +86,7 @@ Text formatting syntax that allows conversion of plain text to rich text HTML, P
 - Websites 
 
 ## Markdown - Bookdown
-Tool for walking new R users through process of loading and running packages. 
+Compile documents into chapters & books - document complex analyses & generate tool user guides.   
 
 *Example:* [Utah IR R tools user guide](https://bookdown.org/jakevl/IR-R-tools-guide/)
 ```{r, echo=F, fig.align="center"}
@@ -144,18 +146,20 @@ two_site_nr=readWQP(type="narrowresult",
 utah_lake_nr=readWQP(type="narrowresult",
    					 auid=c('UT-L-16020201-004_01', 'UT-L-16020201-004_02'),
    					 start_date="01/01/2016", end_date="12/31/2018",
-   					 siteType=c("Lake, Reservoir, Impoundment","Stream"))
+   					 siteType="Lake, Reservoir, Impoundment")
 ```
 
-```{r, echo=F, cache=T}
+```{r, echo=F, cache=T, results='hide'}
 library(leaflet)
 ul_poly=subset(wqTools::au_poly, ASSESS_ID %in% c('UT-L-16020201-004_01', 'UT-L-16020201-004_02'))
 bbox=sf::st_bbox(ul_poly)
-map3=wqTools::buildMap(plot_polys=F) %>% 
+sites=readWQP(type='sites', auid=c('UT-L-16020201-004_01', 'UT-L-16020201-004_02'), siteType="Lake, Reservoir, Impoundment")
+map3=wqTools::buildMap(sites=sites, plot_polys=F) %>% 
+	hideGroup('Sites') %>%
 	addPolygons(data=ul_poly, popup=~ASSESS_ID) %>% 
 	addLayersControl(
 		position ="topleft",
-		baseGroups = c("Topo","Satellite")) %>%
+		baseGroups = c("Topo","Satellite"), overlayGroups='Sites') %>%
 	fitBounds(bbox[[1]], bbox[[2]], bbox[[3]], bbox[[4]]) %>%
 	leaflet.extras::removeSearchFeatures()
 htmlwidgets::saveWidget(map3, file=paste0(getwd(),'/figures/map3.html'))
@@ -203,12 +207,12 @@ knitr::include_graphics('images/utah-lake.png')
 [Source code](https://github.com/utah-dwq/UtahLakeDataExplorer){target="_blank"}
 
 ## E. coli data visualization
-[View on the DWQ Shiny apps server](https://udwq.shinyapps.io/ecoliDataExplorer/)
+[View on the DWQ Shiny apps server](https://udwq.shinyapps.io/ecoliDataExplorer/){target="_blank"}
 
 ```{r, echo=F, fig.align="center"}
 knitr::include_graphics('images/ecoli_upload.png')
 ```
-[Source code](https://github.com/utah-dwq/tmdlTools)
+[Source code](https://github.com/utah-dwq/tmdlTools){target="_blank"}
 
 ## TMDL development
 *Timeseries*
@@ -232,7 +236,9 @@ knitr::include_graphics('images/ecoli_ldc_plot.png')
 # Questions
 <h3>jvander@utah.gov</h3>
 <h3>ehinman@utah.gov</h3>
-<br>
+<h4>**Slides:**</h4>
+<h4>**[bookdown.org/jakevl/udwq-open-source](https://bookdown.org/jakevl/utah-dwq-open-source/){target="_blank"}**</h4>
+
 ```{r, echo=F, fig.align="center"}
 knitr::include_graphics('images/title-logo.PNG')
 ```
